--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+</head>
 <body>
 
 <h2>Informations de candidature</h2>
