--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -8,6 +8,15 @@
 
 <h2>Informations de candidature</h2>
 
+<div class="row" id="projet">
+  <div class="col-lg-4">
+    <image>
+    </image>
+  </div>
+  <div class="col-lg-4">largeur3</div>
+  <div class="col-lg-4">largeur3</div>
+</div>
+
 <form>
   Nom :<br>
   <input type="text" name="Nom" value="">
