--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -10,11 +10,14 @@
 
 <div class="row" id="projet">
   <div class="col-lg-4">
-    <image>
-    </image>
+    <img src="img/webprojet1.png" alt="projet 1">
   </div>
-  <div class="col-lg-4">largeur3</div>
-  <div class="col-lg-4">largeur3</div>
+  <div class="col-lg-4">
+    <img src="img/webprojet1.png" alt="projet 2">
+  </div>
+  <div class="col-lg-4">
+    <img src="img/webprojet1.png" alt="projet 3">
+  </div>
 </div>
 
 <form>
