--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -17,7 +17,7 @@
     <img src="img/webprojet1.png" alt="projet 2">
   </div>
   <div class="col-lg-4" id="img3">
-    <img src="img/webprojet1.png" alt="projet 3">
+    <img src="img/webprojet1.png" alt="projet 3 Poulet">
   </div>
 </div>
 
