--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -11,13 +11,36 @@
 
 <div class="row" id="projet">
   <div class="col-lg-4" id="img1">
-    <img src="img/webprojet1.png" alt="projet 1">
+    <div class="box">
+      <div class="row">
+        <img src="img/webprojet1.png" alt="projet 1">
+      </div>
+      <div class="row">
+        <p>test</p>
+      </div>
+    </div>
   </div>
   <div class="col-lg-4" id="img2">
-    <img src="img/webprojet1.png" alt="projet 2">
+    <div class="box">
+      <div class="row">
+        <img src="img/webprojet1.png" alt="projet 1">
+      </div>
+      <div class="row">
+        <p>test</p>
+      </div>
+    </div>
+  </div>
   </div>
   <div class="col-lg-4" id="img3">
-    <img src="img/webprojet1.png" alt="projet 3 Poulet">
+    <div class="box">
+      <div class="row">
+        <img src="img/webprojet1.png" alt="projet 1">
+      </div>
+      <div class="row">
+        <p>test</p>
+      </div>
+    </div>
+  </div>
   </div>
 </div>
 
@@ -51,9 +74,5 @@
     </form>
   </div>
 </div>
-
-
-
-<p>test git</p>
 
 </body>
