--- a/appelOffre/home.html
+++ b/appelOffre/home.html
@@ -48,7 +48,7 @@
     <form>
       <div class="form-group">
         <div class="row">
-          <div class="col-lg-3" id="panneauGauche">
+          <div class="col-lg-4" id="panneauGauche">
             <label for="nomDuCandidat">Nom</label>
             <input type="text" class="form-control" id="nomDuCandidat" placeholder="Nom">
             <label for="prenomDuCandidat">Prénom</label>
@@ -59,18 +59,39 @@
             <input type="email" class="form-control" id="mail" aria-describedby="emailWarn" placeholder="Mail">
             <small id="emailWarn" class="form-text text-muted">Nous nous engageons à vendre cet e-mail au plus offrant</small>
           </div>
-      <div class="col-lg-3" id="panneauDroite">
-        Devis :<br>
-        <input type="file" name="devis">
-        <br>
-        lien :<br>
-        <input type="text" name="lien">
-      </div>
+          <div class="col-lg-4" id="panneaumilieu">
+            <label for="raisonSocial">Raison sociale</label>
+            <input type="text" class="form-control" id="raisonSocial" placeholder="Raison sociale">
+            <label for="siret">Siret</label>
+            <input type="number" class="form-control" id="prenomDuCandidat" placeholder="Votre numéro de siret à 14 chiffres">
+            <label for="ca">Chiffre d'affaire</label>
+            <input type="number" class="form-control" id="ca" placeholder="Chiffre d'affaire annuel en €">
+            <label for="url">Site internet</label>
+            <input type="text" class="form-control" id="url" placeholder="Adresse de votre site internet">
+          </div>
+          <div class="col-lg-4" id="panneauDroite">
+            <label for="devis">Devis</label>
+            <div class="input-group mb-2" id="devis">
+                <div class="custom-file">
+                  <input type="file" class="custom-file-input" id="toSend">
+                  <label class="custom-file-label" for="toSend">Importer votre devis</label>
+                </div>
+            </div>
+            <label for="fichierComplementaires">Fichiers complémentaires</label>
+            <div class="input-group mb-2" id="fichierComplementaires">
+                <div class="custom-file">
+                  <input type="file" class="custom-file-input" id="toSend">
+                  <label class="custom-file-label" for="toSend">Fichiers</label>
+                </div>
+            </div>
+          </div>
+          </div>
+    <div id="sendButton">
+        <button type="submit" class="btn btn-primary">Envoyer ma candidature</button>
     </div>
-      <input type="submit" value="Envoyer sa candidature">
   </div>
-    </form>
-  </div>
+</form>
+
 </div>
 
 </body>
